--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/food
 spring.datasource.username=root
 spring.datasource.password=root
 spring.batch.jdbc.initialize-schema=always
+spring.jpa.open-in-view=false
+
 #schema.sql
 #schema-all.sql
 spring.sql.init.mode=always
