--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Online-food-Ordering
-spring.datasource.url=jdbc:mysql://localhost:3306/food
+spring.datasource.url=jdbc:mysql://localhost:3306/foodcart
 spring.datasource.username=root
 spring.datasource.password=root
 spring.batch.jdbc.initialize-schema=always
